--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "name": "bars",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "dependencies": {
-    "node-sass": "^4.14.1"
-  },
-  "devDependencies": {},
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "scss": "node-sass -watch -include-path scss -o css"
+    "dev": "vite",
+    "build": "vite build",
+    "serve": "vite preview"
   },
-  "author": "",
-  "license": "ISC"
+  "devDependencies": {
+    "@sveltejs/vite-plugin-svelte": "^1.0.0-next.11",
+    "node-sass": "^6.0.1",
+    "sass": "^1.43.2",
+    "svelte": "^3.37.0",
+    "vite": "^2.6.4"
+  }
 }
