fix build and refactor more stuff

--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^1.0.0-next.11",
-    "node-sass": "^6.0.1",
-    "sass": "^1.43.2",
     "svelte": "^3.37.0",
     "vite": "^2.6.4"
+  },
+  "dependencies": {
+    "tinycolor2": "^1.4.2"
   }
 }
