--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "deploy": "vite build && gh-pages -d dist"
   },
   "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "^1.0.0-next.11",
-    "gh-pages": "^3.2.3",
-    "svelte": "^3.37.0",
-    "vite": "^2.6.4"
+    "@sveltejs/vite-plugin-svelte": "^2.4.6",
+    "gh-pages": "^6.0.0",
+    "svelte": "^4.2.1",
+    "vite": "^4.4.9"
   },
   "dependencies": {
     "tinycolor2": "^1.4.2"
